<resources>
    <string name="app_name">tinify</string>
    <string name="create_account">Create Account</string>
    <string name="a_tiny_news_app">A TIny News App</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="let_s_read">Let\'s Read</string>
    <string name="read_news_in_tiny_sentence">Read News In Tiny Sentence</string>
    <string name="main_title">Main Title</string>
    <string name="sub_title">Sub Title</string>
    <string name="todo">TODO</string>
</resources>
